# rigel-orchestration-plugin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Rigelfile  Rigelfile.example  Rigelfile_autogen  deploy_and_update.py  deploy_observability.py  dockerfile_entrypoint.sh  pyproject.toml  readiness_probe.sh  run_observability.sh
.github/workflows/: ci.yml
app_testing/action/: PrimeFactorization.action  client.py  server.py
app_testing/pubsub/: publisher.py  subscriber.py
app_testing/service/: Rigelfile  docker-compose.yaml
app_testing/service/client/: Dockerfile  client.py
app_testing/service/server/: Dockerfile  server.py
app_testing/temp/: k8s-manifests.yaml
app_testing/temp/publisher/: Dockerfile  publisher.py
app_testing/temp/subscriber/: Dockerfile  subscriber.py
docs/: conf.py  index.rst  src.rst  src.utils.rst
src/: models.py  plugin.py
src/utils/: dict_operations.py
tests/: test_dict_operations.py  test_integration.py  test_plugin.py
