[tool.poetry]
name = "src"
version = "0.1.0"
description = "An orchestration tool that enables Rigel to manage the deployment of applications with Kubernetes."
authors = ["Nicholas Hopf <nicholas.hopf@inesctec.pt>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "<2.0"
kubernetes = ">=31.0.0,<32.0.0"
rigel = { git = "https://github.com/rigel-ros/rigel.git", rev = "develop", python = ">=3.10,<4.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.6"
mypy = "^1.14.1"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D100", "D104", "D203", "D213", "G004", "COM812", "ISC001"]
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG", # Unused function args (fixtures)
    "FBT", # Don't care about booleans as positional arguments in tests
    "PLR2004", # Magic value used in comparison
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "--cov=src --cov-report=term-missing"
